--- a/Project/Index.html
+++ b/Project/Index.html
@@ -6,58 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="mystyle.css">
-    <title>Document</title>
+    <title>Viet Travel | Homepage</title>
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <!--  -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-color">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand" href="#" style="margin-top: -10px; margin-bottom: -10px;"><img src="logo/viet_travel_logo.png" style="width: 100px; height: 100px"></a>
+                <button class="navbar-toggler bg-color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-              </button>
+                </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                  </li>
-                </ul>
-                <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-              </div>
-            </div>
-          </nav>
-        <!-- <nav class="navbar navbar-expand-sm navbar-light bg-light">
-            <a class="navbar-brand" href="#" style="margin-top: -14px; margin-bottom: -14px;"><img src="logo/viet_travel_logo.png" style="width: 170px; height: 90px"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Themes
+                        <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Themes
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="#">Mountain Tour</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Sea Tour</a>
@@ -65,8 +31,8 @@
                             <a class="dropdown-item" href="#">Island Tour</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Old Town Tour</a>
-                        </div>
-                    </li>
+                        </ul>
+                      </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">News</a>
                     </li>
@@ -83,13 +49,11 @@
                         <a class="nav-link" href="#">Contact</a>
                     </li>
                 </ul>
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <form class="form-inline my-2 my-lg-0">
-                            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" style="width:300px;">
-                            <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Search</button>
-                        </form>
-                    </li>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" style="width: 300px;">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
                 </ul>
                 <ul class="navbar-nav justify-content-end">
                     <li class="nav-item">
@@ -99,8 +63,9 @@
                         <a class="nav-link" href="#">Log In</a>
                     </li>
                 </ul>
+              </div>
             </div>
-        </nav>  -->
+          </nav>
     </header>
     <section>
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -112,35 +77,39 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/dao_phu_quoc.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption  d-md-block" style="top: 35%;">
-                    <h1>First slide label</h1>
-                    <p>Some representative placeholder content for the first slide.</p>
-                    <button type="button" class="btn btn-outline-secondary" style="color: #fff; border: 2px solid #fff; padding: 16px 40px; font-size: 20px; margin-top: 20px;">View More</button>
+                <img src="img/ma-pi-leng.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption  d-md-block">
+                    <h5>HÀ GIANG</h5>
+                    <span class="title-line"></span>
+                    <p class="description">Enjoy <i class="keyword">a wonderful day</i> among the mountains.</p>
+                    <button type="button" class="btn btn-outline-secondary">View More</button>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="img/ma-pi-leng.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption  d-md-block" style="top: 35%;">
-                  <h1>Second slide label</h1>
-                  <p>Some representative placeholder content for the second slide.</p>
-                  <button type="button" class="btn btn-outline-secondary" style="color: #fff; border: 2px solid #fff; padding: 16px 40px; font-size: 20px; margin-top: 20px;">View More</button>
+                <img src="img/vinh-ha-long.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption  d-md-block">
+                  <h5>VỊNH HẠ LONG</h5>
+                  <span class="title-line"></span>
+                  <p class="description">Enjoy <i class="keyword">a wonderful day</i> among the mountains.</p>
+                  <button type="button" class="btn btn-outline-secondary">View More</button>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="img/pho_co_hoi_an.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption  d-md-block" style="top: 35%;">
-                  <h1>Third slide label</h1>
-                  <p>Some representative placeholder content for the third slide.</p>
-                  <button type="button" class="btn btn-outline-secondary" style="color: #fff; border: 2px solid #fff; padding: 16px 40px; font-size: 20px; margin-top: 20px;">View More</button>
+                <div class="carousel-caption  d-md-block">
+                  <h5>HỘI AN</h5>
+                  <span class="title-line"></span>
+                  <p class="description">Enjoy <i class="keyword">a wonderful day</i> among the mountains.</p>
+                  <button type="button" class="btn btn-outline-secondary">View More</button>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="img/vinh_ha_long.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption  d-md-block" style="top: 35%;">
-                  <h1>Third slide label</h1>
-                  <p>Some representative placeholder content for the third slide.</p>
-                  <button type="button" class="btn btn-outline-secondary" style="color: #fff; border: 2px solid #fff; padding: 16px 40px; font-size: 20px; margin-top: 20px;">View More</button>
+                <img src="img/dao_phu_quoc.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption  d-md-block">
+                  <h5>PHÚ QUỐC</h5>
+                  <span class="title-line"></span>
+                  <p class="description">Enjoy <i class="keyword">a wonderful day</i> among the mountains.</p>
+                  <button type="button" class="btn btn-outline-secondary">View More</button>
                 </div>
               </div>
             </div>
@@ -180,9 +149,7 @@
                             <div class="promotion-slide">
                                 <img src="img/con-dao.jpg" alt="">
                             </div>
-                            <div class="promotion-slide">
-                                <img src="img/vinh-ha-long.jpg" alt="">
-                            </div>
+                            
                             <div class="promotion-slide">
                                 <img src="img/ha-giang.jpg" alt="">
                             </div>
