--- a/Project/Index.html
+++ b/Project/Index.html
@@ -248,7 +248,23 @@
     </section>
 
     <section>
-        
+        <div class="section about--section">
+            <div class="container">
+                <div class="about--content center">
+                    <h5>The Agency</h5>
+                    <span class="line gold"></span>
+                    <h2>Discovering the <span class="t-gold">World</span></h2>
+                    <h6 class="paragraph">Passionate about travel and sharing the world's wonders on the leisure travel side. We provide corporate travelers hi-touch services to facilitate their business travel needs. Named each year as one of the <span class="t-gold">"Best Places To Work"</span> in New York.</h6>
+                    <button type="button" class="btn about--btn">About Us</button>
+                </div>
+            </div>
+            <div class="video-back">
+                <div class="color-overlay op-7"></div>
+                <video autoplay="" loop="" muted="" >
+                    <source src="img/video.mp4" type="video/mp4">
+                </video>
+            </div>
+        </div>
     </section>
 
     <section>
