--- a/Project/Index.html
+++ b/Project/Index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="owlcarousel/assets/owl.theme.default.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="owlcarousel/owl.carousel.min.js"></script>
+    <script src="https://kit.fontawesome.com/747940bb1c.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="mystyle.css">
     <title>Viet Travel | Homepage</title>
@@ -42,13 +43,13 @@
     </script>
     <header>
         <!--  -->
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light" style="padding: 10px 0 10px 0;">
             <div class="container">
-                <a class="navbar-brand" href="#" style="margin-top: -10px; margin-bottom: -10px;"><img src="logo/viet_travel_logo.png" style="width: 75px; height: 75px"></a>
+                <a class="navbar-brand" href="#" style="margin-top: -10px; margin-bottom: -10px;"><img src="logo/logo2.png" style="width: 200px; height: auto"></a>
                 <button class="navbar-toggler bg-color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
-                <div style="width: 585px;"></div>
+                <div style="width: 520px;"></div>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
@@ -64,9 +65,6 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Old Town Tour</a>
                         </ul>
-                      </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">News</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Promotions</a>
@@ -392,7 +390,49 @@
             </div>
         </div>
     </section>
+
+    <section>
+        <div class="banner--form">
+            <div class="container center">
+                <div class="banner--form__signup">
+                    <h5 class="t-gold">News Letter</h5>
+                    <span class="line-black"></span>
+                    <h2>Don't <span class="t-gold">miss</span> it!</h2>
+                    <h6>Đăng ký tài khoản để biết các chương trình khuyến mãi đặc biệt và cập nhật thú vị.</h6>
+                    <div id="fields">
+                        <form id="contact--form">
+                            <div class="controls newsletter">
+                                <div class="form-group">
+                                    <div class="input--item form-group has-erro has-danger">
+                                        <input type="email" name="email" id="form--email" class="form-control" placeholder="Email address" required="required" data-error="Valid email is required.">
+                                        <input type="submit" name="submit" id="form--submit">
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <h5 class="mt-100 t-gold">stay connected</h5>
+                <span class="line gold"></span>
+                <div class="social-container m-20 center">
+                    <a href="" class="btn btn-light white icon t-gold"><i class="fab fa-facebook-square"></i></a>
+                    <a href="" class="btn btn-light white icon t-gold"><i class="fab fa-instagram"></i></a>
+                    <a href="" class="btn btn-light white icon t-gold"><i class="fab fa-linkedin"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer>
+        <div class="container">
+            <div class="links">
+                <a href="">Themes</a>
+                <a href="">Promotions</a>
+                <a href="">Blogs</a>
+                <a href="">About</a>
+                <a href="">Contact</a>
+            </div>
+            <div class="copyright center">&copy;Web của tụi mình</div>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
