--- a/Project/Index.html
+++ b/Project/Index.html
@@ -11,7 +11,8 @@
     <script src="https://kit.fontawesome.com/747940bb1c.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="mystyle.css">
-    <title>Viet Travel | Homepage</title>
+    <link rel="icon" href="logo/fav-logo.png">
+    <title>Vietnam Experdition | Homepage</title>
 </head>
 <body>
     <script>
@@ -25,11 +26,9 @@
                     else{
                     $('nav').removeClass('sticky')
                     }
-                }
-                
+                }  
             })
         })
-
         $(window).resize(function(){
             var width = $(window).width();
             console.log(width);
@@ -43,13 +42,13 @@
     </script>
     <header>
         <!--  -->
-        <nav class="navbar navbar-expand-lg navbar-light" style="padding: 10px 0 10px 0;">
+        <nav class="navbar navbar-expand-lg navbar-light" style="padding:10px 0">
             <div class="container">
-                <a class="navbar-brand" href="#" style="margin-top: -10px; margin-bottom: -10px;"><img src="logo/logo2.png" style="width: 200px; height: auto"></a>
+                <a class="navbar-brand" href="#" style="margin-top: -10px; margin-bottom: -10px;"><img src="logo/logo.png" style="width: 250px; height: auto"></a>
                 <button class="navbar-toggler bg-color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
-                <div style="width: 520px;"></div>
+                <div style="width: 100%;"></div>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
@@ -76,13 +75,10 @@
                         <a class="nav-link" href="#">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#"><i class="far fa-envelope"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sign Up</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Log In</a>
+                        <a class="nav-link" href="#"><i class="far fa-user"></i></a>
                     </li>
                 </ul>
               </div>
@@ -103,7 +99,7 @@
                 <div class="carousel-caption  d-md-block">
                     <h5>HÀ GIANG</h5>
                     <span class="title-line"></span>
-                    <p class="description">Enjoy <i class="keyword">a wonderful day</i> among the mountains.</p>
+                    <p class="description">Enjoy<i class="keyword"> a wonderful day</i> among the mountains</p>
                     <button type="button" class="btn btn-outline-secondary">View More</button>
                 </div>
               </div>
@@ -112,16 +108,16 @@
                 <div class="carousel-caption  d-md-block">
                   <h5>VỊNH HẠ LONG</h5>
                   <span class="title-line"></span>
-                  <p class="description">Enjoy <i class="keyword">a wonderful day</i> among the mountains.</p>
+                  <p class="description">Admire<i class="keyword"> the wonder</i> of the world</p>
                   <button type="button" class="btn btn-outline-secondary">View More</button>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="img/themes-img/themes-da-lat.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption  d-md-block">
-                  <h5>HỘI AN</h5>
+                  <h5>ĐÀ LẠT</h5>
                   <span class="title-line"></span>
-                  <p class="description">Enjoy <i class="keyword">a wonderful day</i> among the mountains.</p>
+                  <p class="description"><i class="keyword">Great</i> holiday in the foggy city</p>
                   <button type="button" class="btn btn-outline-secondary">View More</button>
                 </div>
               </div>
@@ -130,7 +126,7 @@
                 <div class="carousel-caption  d-md-block">
                   <h5>MỘC CHÂU</h5>
                   <span class="title-line"></span>
-                  <p class="description">Enjoy <i class="keyword">a wonderful day</i> among the mountains.</p>
+                  <p class="description"><i class="keyword">Peaceful</i> countryside life</p>
                   <button type="button" class="btn btn-outline-secondary">View More</button>
                 </div>
               </div>
@@ -412,7 +408,7 @@
                         </form>
                     </div>
                 </div>
-                <h5 class="mt-100 t-gold">stay connected</h5>
+                <h5 style="font-weight: bold; letter-spacing: 4px;">stay connected</h5>
                 <span class="line gold"></span>
                 <div class="social-container m-20 center">
                     <a href="" class="btn btn-light white icon t-gold"><i class="fab fa-facebook-square"></i></a>
@@ -431,7 +427,7 @@
                 <a href="">About</a>
                 <a href="">Contact</a>
             </div>
-            <div class="copyright center">&copy;Web của tụi mình</div>
+            <div class="copyright center">2021 - All rights reserved to &copy;Vietnam Experdition</div>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
