--- a/Project/Index.html
+++ b/Project/Index.html
@@ -73,7 +73,7 @@
                         <a class="nav-link" href="#">Blogs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="About.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" style="cursor: pointer;"><i class="far fa-envelope navbar-icon-scale" data-bs-toggle="modal" href="#staticBackdrop-Contact"></i></a>
@@ -364,24 +364,24 @@
                             <img src="img/view1.jpg" class="d-block" alt="...">
                             <div class="testimonial--clients__info">
                                 <h6>A must-have template. Maybe one of the best vintage templates so far in the market. Recommended 100%.</h6>
-                                <p class="testimonial--clients__name">Nguyễn Minh Luân</p>
-                                <span class="testimonial--clients__job">Students</span>
+                                <p class="testimonial--clients__name">JOHN E. PERRY</p>
+                                <span class="testimonial--clients__job">Moravian Ltd - CEO</span>
                             </div>
                           </div>
                           <div class="carousel-item">
                             <img src="img/view2.jpg" class="d-block" alt="...">
                               <div class="testimonial--clients__info">
                                 <h6>Extremelly flexible and easy to use. Code is clean and all files well organized. Great job guys.</h6>
-                                <p class="testimonial--clients__name">Lê Hồng Phong</p>
-                                <span class="testimonial--clients__job">Students</span>
+                                <p class="testimonial--clients__name">MARIA De ANDRE'</p>
+                                <span class="testimonial--clients__job">Artist</span>
                               </div>
                           </div>
                           <div class="carousel-item">
                             <img src="img/view3.jpg" class="d-block" alt="...">
                               <div class="testimonial--clients__info">
                                 <h6>Fast, easy, reliable, fun, flexible, modern. Many options, colors, widgets. +++</h6>
-                                <p class="testimonial--clients__name">Nguyễn Đình Nhật</p>
-                                <span class="testimonial--clients__job">Moravian Ltd - CEO</span>
+                                <p class="testimonial--clients__name">LINDA FALANGY</p>
+                                <span class="testimonial--clients__job">Graphic Designer</span>
                               </div>
                           </div>
                         </div>
@@ -398,10 +398,10 @@
                     <h5 class="t-gold">News Letter</h5>
                     <span class="line-black"></span>
                     <h2>Don't <span class="t-gold">miss</span> it!</h2>
-                    <h6>Đăng ký tài khoản để biết các chương trình khuyến mãi đặc biệt và cập nhật thú vị.</h6>
+                    <h6>Kết nối với chúng tôi để biết các chương trình khuyến mãi đặc biệt và cập nhật thú vị.</h6>
                     <div id="fields">
                         <form id="contact--form">
-                            <div class="controls newsletter">
+                            <div class="controls">
                                 <div class="form-group">
                                     <div class="input--item form-group has-erro has-danger">
                                         <input type="email" name="email" id="form--email" class="form-control" placeholder="Email address" required="required" data-error="Valid email is required.">
@@ -412,18 +412,25 @@
                         </form>
                     </div>
                 </div>
-                <h5 style="font-weight: bold; letter-spacing: 4px;">stay connected</h5>
+                <h5 style="font-weight: bold; letter-spacing: 2px;">stay connected</h5>
                 <span class="line gold"></span>
                 <div class="social-container m-20 center">
-                    <a href="" class="btn btn-light white icon t-gold"><i class="fab fa-facebook-square"></i></a>
-                    <a href="" class="btn btn-light white icon t-gold"><i class="fab fa-instagram"></i></a>
-                    <a href="" class="btn btn-light white icon t-gold"><i class="fab fa-linkedin"></i></a>
+                    <div>
+                        <a href="" class="btn btn-light icon"><i class="fab fa-facebook-f" style="color: goldenrod;"></i></a>
+                    </div>
+                    <div>
+                        <a href="" class="btn btn-light icon"><i class="fab fa-google-plus-g" style="color: goldenrod;"></i></a>
+                    </div>
+                    <div>
+                        <a href="" class="btn btn-light icon"><i class="fab fa-instagram" style="color: goldenrod;"></i></a>
+                    </div>
+                    <div>
+                        <a href="" class="btn btn-light icon"><i class="fab fa-twitter" style="color: goldenrod;"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-
-    
     <section>
         <!-- Liên hệ -->
         <div class="modal fade" id="staticBackdrop-Contact" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -444,8 +451,9 @@
                         </form>
                     </div>
                     <div class="modal-footer" style="display: inline-block; text-align: right;">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Send feedback</button>
+                        <div class="modal-footer-contact">
+                            <button type="button" class="btn btn-primary">Send feedback</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -476,7 +484,7 @@
                     <div class="modal-footer">
                         <a href="" class="forget-password">Quên mật khẩu?</a>
                         <div class="modal-footer-login">
-                            <a href=""><button type="button" class="btn btn-primary" >Đăng nhập</button></a>
+                            <button type="button" class="btn btn-primary" >Đăng nhập</button>
                         </div>
                         <span class="line gold" style="height: 1.5px;"></span>
                         <p>Đăng nhập với các mạng xã hội khác</p>
@@ -488,7 +496,7 @@
                                 <a href="" class="" ><i class="fab fa-google-plus-g social-network-icon-scale" style="color: red"></i></a>
                             </div>
                             <div class="social-network-icon" style="border: 2px solid orange">
-                                <a href="" class="" ><i class="fab fa-instagram-square social-network-icon-scale" style="color: orange;"></i></a>
+                                <a href="" class="" ><i class="fab fa-instagram social-network-icon-scale" style="color: orange;"></i></a>
                             </div>
                             <div class="social-network-icon" style="border: 2px solid rgb(29, 155, 240)">
                                 <a href="" class="" ><i class="fab fa-twitter social-network-icon-scale" style="color: rgb(29, 155, 240);"></i></a>
