--- a/Project/About.html
+++ b/Project/About.html
@@ -266,8 +266,9 @@
                         </form>
                     </div>
                     <div class="modal-footer" style="display: inline-block; text-align: right;">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Send feedback</button>
+                        <div class="modal-footer-contact">
+                            <button type="button" class="btn btn-primary">Send feedback</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -298,7 +299,7 @@
                     <div class="modal-footer">
                         <a href="" class="forget-password">Quên mật khẩu?</a>
                         <div class="modal-footer-login">
-                            <a href=""><button type="button" class="btn btn-primary" >Đăng nhập</button></a>
+                            <button type="button" class="btn btn-primary" >Đăng nhập</button>
                         </div>
                         <span class="line gold" style="height: 1.5px;"></span>
                         <p>Đăng nhập với các mạng xã hội khác</p>
