--- a/Project/About.html
+++ b/Project/About.html
@@ -52,28 +52,17 @@
                 <div style="width: 100%;"></div>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Themes
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Mountain Tour</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Sea Tour</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Island Tour</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Old Town Tour</a>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Themes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Promotions</a>
+                        <a class="nav-link" href="Promotions.html">Promotions</a>
                     </li> 
                     <li class="nav-item">
                         <a class="nav-link" href="#">Blogs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="About.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" style="cursor: pointer;"><i class="far fa-envelope navbar-icon-scale" data-bs-toggle="modal" href="#staticBackdrop-Contact"></i></a>
@@ -92,7 +81,7 @@
     <section>
         <div class="about">
             <div class="container center">
-                <div class="breadcrumb t-white">
+                <div class="about-title t-white">
                     <a class="t-gold fw-bold" href="index.html">Home</a> / About
                 </div> 
             </div>
@@ -361,11 +350,10 @@
     <footer>
         <div class="container">
             <div class="links">
-                <a class="footer-font" href="">Themes</a>
-                <a class="footer-font" href="">Promotions</a>
-                <a class="footer-font" href="">Blogs</a>
-                <a class="footer-font" href="">About</a>
-                <a class="footer-font" href="">Contact</a>
+                <a class="footer-font" href="#">Themes</a>
+                <a class="footer-font" href="Promotions.html">Promotions</a>
+                <a class="footer-font" href="#">Blogs</a>
+                <a class="footer-font" href="About.html">About</a>
             </div>
             <div class="copyright center">2021 - All rights reserved to &copy;Vietnam Experdition</div>
         </div>
